--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ export default function PresentationManager() {
   const [error, setError] = useState('');
 
   // Change this to your Railway backend URL after deployment
-  const API_URL = 'https://railway.com/project/c05457f0-71c5-4dc2-b17f-4d4e867b07e2';
+  const API_URL = 'https://railway.com/project/2f36888e-4284-4712-a318-924b61fb2d6e/service/1744ee46-c4ba-4b5c-b019-acc7ef9b17aa?id=f3f71605-0d19-4887-960e-2dc0ee70ae21&';
 
   useEffect(() => {
     if (isAuthenticated) {
