--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
   <div id="root"></div>
   <script type="text/babel">
     // PASTE THE ENTIRE FRONTEND CODE HERE (from the artifact)
-    import React, { useState, useEffect } from 'react';
-import { Upload, FileText, Download, Trash2, Eye, Search, Folder, Lock, LogOut } from 'lucide-react';
-
+   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js">
 export default function PresentationManager() {
   const [isAuthenticated, setIsAuthenticated] = useState(false);
   const [password, setPassword] = useState('');
