--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       const [error, setError] = useState('');
 
       // CHANGE THIS to your real Railway URL
-      const API_URL = 'https://railway.com/project/2f36888e-4284-4712-a318-924b61fb2d6e/service/1744ee46-c4ba-4b5c-b019-acc7ef9b17aa?id=f3f71605-0d19-4887-960e-2dc0ee70ae21&';
+      const API_URL = 'https://presentation-manager-backend-production-2f36.up.railway.app';
 
       useEffect(() => {
         if (isAuthenticated) loadPresentations();
