fixed ai dumass vibe coded code

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       const [error, setError] = useState('');
 
       // CHANGE THIS to your real Railway URL
-      const API_URL = 'diplomatic-harmony-production-66e6.up.railway.app';
+      const API_URL = 'https://diplomatic-harmony-production-66e6.up.railway.app';
 
       useEffect(() => {
         if (isAuthenticated) loadPresentations();
